--- a/trunk/BullyGame/war/game.html
+++ b/trunk/BullyGame/war/game.html
@@ -1,8 +1,9 @@
 <html>
   <head>
+    <script type="text/javascript" src="js/shapes.js"></script>
     <script type="text/javascript" src="js/board.js"></script>
   </head>
-  <body onLoad="draw();" onClick = "movePiece();">
+  <body onLoad="setUpBoard();" onClick = "onClick();">
     <canvas id="canvas" width="510" height="510"></canvas>
   </body>
 </html>
