Added basic pawn movement - click anywhere to move the red pawn 2 spaces, then the yellow, then green, then blue, then red again, etc. They will continue moving until they reach the home area, where they will stop.

--- a/trunk/BullyGame/war/game.html
+++ b/trunk/BullyGame/war/game.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <script type="text/javascript" src="js/shapes.js"></script>
+   	<script type="text/javascript" src="js/square.js"></script>  
+    <script type="text/javascript" src="js/pawn.js"></script>
     <script type="text/javascript" src="js/board.js"></script>
   </head>
   <body onLoad="setUpBoard();" onClick = "onClick();">
