--- a/trunk/BullyGame/war/ClientTest.html
+++ b/trunk/BullyGame/war/ClientTest.html
@@ -12,16 +12,14 @@
 	          <p>Click here to draw a card and roll the dice<p>
 	          <button onclick='getCard()'>Click!</button>
 	          <br/>
-	          <img alt="new card" src="#" id="NewCard" />
 	          <div id="dice">
-	          	<p>Dice Rolls:</p>
+	          	Dice Rolls: 
 	          	<div id="Dice1"> </div>
 	          	<div id="Dice2"> </div>
 	          </div>
+	          <img alt="new card" src="#" id="NewCard" />
           </div>
-          
           <hr/>
-          
           <div border="1">
 	          <p>Enter a string in the text box to send to the servlet</p>
 	          <textarea id="UserInput" cols="50" rows="5"></textarea>
