--- a/trunk/BullyGame/war/ClientTest.html
+++ b/trunk/BullyGame/war/ClientTest.html
@@ -6,11 +6,19 @@
     <script type="text/javascript" src="js/ClientActions.js"></script>
     <script type="text/javascript" src="js/mootools-core-1.3.1-full-compat.js"></script>
   </head>
-  <body onload="getGameInfo()">
+  <body onload="joinGame()">
       <div id="body">
-      	  <div border="1">
+      	  <div>
+      	  	  <div style="width: 200px; border:3px solid black;">
+      	  	  	Player: <span id="playername">Anonymous</span>
+      	  	  	<br/>
+      	  	  	Number of Players: <span id="numplayers">0</span>
+      	  	  	<br/>
+      	  	  	Turn #<span id="turn">0</span>
+      	  	  </div> 
 	          <p>Click here to draw a card and roll the dice<p>
-	          <button onclick='getCard()'>Click!</button>
+	          <button onclick="getCard()">Get Card & Roll Dice</button>
+	          <button onclick="playTurn()">Use Card</button>
 	          <br/>
 	          <div id="dice">
 	          	Dice Rolls: 
