--- a/trunk/BullyGame/war/ClientTest.html
+++ b/trunk/BullyGame/war/ClientTest.html
@@ -6,22 +6,28 @@
     <script type="text/javascript" src="js/ClientActions.js"></script>
     <script type="text/javascript" src="js/mootools-core-1.3.1-full-compat.js"></script>
   </head>
-  <body onload="getGameInfo()">
+  <body onload="joinGame()">
       <div id="body">
-      	  <div border="1">
+      	  <div>
+      	  	  <div style="width: 200px; border:3px solid black;">
+      	  	  	Player: <span id="playername">Anonymous</span>
+      	  	  	<br/>
+      	  	  	Number of Players: <span id="numplayers">0</span>
+      	  	  	<br/>
+      	  	  	Turn #<span id="turn">0</span>
+      	  	  </div> 
 	          <p>Click here to draw a card and roll the dice<p>
-	          <button onclick='getCard()'>Click!</button>
+	          <button onclick="getCard()">Get Card & Roll Dice</button>
+	          <button onclick="playTurn()">Use Card</button>
 	          <br/>
-	          <img alt="new card" src="#" id="NewCard" />
 	          <div id="dice">
-	          	<p>Dice Rolls:</p>
+	          	Dice Rolls: 
 	          	<div id="Dice1"> </div>
 	          	<div id="Dice2"> </div>
 	          </div>
+	          <img alt="new card" src="#" id="NewCard" />
           </div>
-          
           <hr/>
-          
           <div border="1">
 	          <p>Enter a string in the text box to send to the servlet</p>
 	          <textarea id="UserInput" cols="50" rows="5"></textarea>
