--- a/trunk/BullyGame/war/diceTest.html
+++ b/trunk/BullyGame/war/diceTest.html
@@ -3,6 +3,7 @@
     <script type="text/javascript" src="js/lib/mootools-core-1.3.js"></script>
     <script type="text/javascript" src="js/lib/mcl-min.js"></script>
    	<script type="text/javascript" src="js/dice.js"></script>
+   	<script type="text/javascript" src="js/services.js"></script>
    	<script type="text/javascript">
    		function reloadAndDraw() {   			   		
    			// Get Random values
@@ -18,6 +19,7 @@
    			var d1 = createDie('d1', v1, p1x,p1y, 30);
    			var d2 = createDie('d2', v2, p2x,p2y, 0);
    			drawDiceRoll(d1,d2);
+   			$('diceroll').play();
    		}  	
 		$(window).addEvent('load',function(){
 			reloadAndDraw();
@@ -25,6 +27,10 @@
    	</script>
   </head>
   <body>
-    <canvas onclick="reloadAndDraw();" id="diceCanvas" width="500" height="200" style="border: 2px solid black;background-image: url('images/green_felt.jpg');"></canvas>
+
+    <canvas id="diceCanvas" width="500" height="200" style="border: 2px solid black;background-image: url('images/green_felt.jpg');"></canvas>
+    <br/>    
+    <input type="button" value="Roll Again" onclick="reloadAndDraw();"/>
+  	<audio id="diceroll" src="audio/diceroll1.wav" preload="auto"/>
   </body>
 </html>
