Updated javascript to only allow users to draw/play cards on their turn *still need to validate the turns/rolls on the server side though...

--- a/trunk/BullyGame/war/ClientTest.html
+++ b/trunk/BullyGame/war/ClientTest.html
@@ -17,8 +17,8 @@
       	  	  	Turn #<span id="turn">0</span>
       	  	  </div> 
 	          <p>Click here to draw a card and roll the dice<p>
-	          <button onclick="getCard()">Get Card & Roll Dice</button>
-	          <button onclick="playTurn()">Use Card</button>
+	          <button id="DrawCardButton" onclick="getCard()" disabled=true >Get Card & Roll Dice</button>
+	          <button id="PlayCardButton" onclick="playTurn()" disabled=true >Use Card</button>
 	          <br/>
 	          <div id="dice">
 	          	Dice Rolls: 
