--- a/trunk/BullyGame/war/game.html
+++ b/trunk/BullyGame/war/game.html
@@ -23,7 +23,7 @@
   	<br/>
   	<input id="diceButton" type="button" value="Roll Dice" onclick="beginTurn()">
   	<br/>
-  	<canvas id="canvas" style="z-index: 2;" width="625" height="625"></canvas>   
+  	<canvas id="boardCanvas" style="z-index: 2;" width="625" height="625"></canvas>   
 	<br/>
       	
 	<audio id="diceroll" src="audio/diceroll1.wav" preload="auto"/>
