--- a/trunk/BullyGame/war/ClientTest.html
+++ b/trunk/BullyGame/war/ClientTest.html
@@ -4,7 +4,7 @@
     <title></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script type="text/javascript" src="js/ClientActions.js"></script>
-    <script type="text/javascript" src="js/mootools-core-1.3.1-full-compat.js"></script>
+    <script type="text/javascript" src="js/lib/mootools-core-1.3.js"></script>
   </head>
   <body onload="joinGame()">
       <div id="body">
