--- a/trunk/BullyGame/war/game.html
+++ b/trunk/BullyGame/war/game.html
@@ -1,20 +1,19 @@
 <html>
 <head>
-	<script type="text/javascript" src="js/lib/mootools-core-1.3.js"></script>
+	<script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script>
+	<script type="text/javascript" src="js/lib/mootools-yui-compressed.js"></script>
     <script type="text/javascript" src="js/lib/mcl-min.js"></script>
 	<script type="text/javascript" src="js/dice.js"></script>
 	<script type="text/javascript" src="js/square.js"></script>  
 	<script type="text/javascript" src="js/pawn.js"></script>
 	<script type="text/javascript" src="js/point.js"></script>
-	<script type="text/javascript" src="js/board.js"></script>   	
+	<script type="text/javascript" src="js/board.js"></script>
    	<script type="text/javascript" src="js/services.js"></script>
    	<script type="text/javascript"> 	
 		$(window).addEvent('load',function(){
 			setUpBoard();
    		});
-   	</script>
-
-   	
+   	</script>   	
 </head>
 <body>
   	
