--- a/trunk/BullyGame/war/game.html
+++ b/trunk/BullyGame/war/game.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="js/pawn.js"></script>
 	<script type="text/javascript" src="js/point.js"></script>
 	<script type="text/javascript" src="js/board.js"></script>
-   	<script type="text/javascript" src="js/services.js"></script>
+   	<script type="text/javascript" src="js/ClientActions.js"></script>
    	<script type="text/javascript"> 	
 		$(window).addEvent('load',function(){
 			setUpBoard();
